--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-    provider: ^6.0.4
-
+  provider: ^6.0.4
+  http: ^0.13.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
