--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   shared_preferences: ^2.0.15
   auto_size_text: ^3.0.0
   url_launcher: ^6.1.7
-  stripe_payment: ^1.1.4
+  flutter_stripe: ^7.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
